# Toefl-IBT-readingTPO-crawler

./: LICENSE  README.md  REBUILD_INDEX.md
src/zhan_toefl_crawler/: cli.py  crawler.py
zhan-toefl-crawler/: pyproject.toml
zhan-toefl-crawler/data/: article_index.csv  article_index.json
zhan-toefl-crawler/tests/: test_parsing.py
