[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zhan-toefl-crawler"
version = "0.1.0"
description = "CLI crawler/exporter for Zhan TOEFL reading passages and worksheets."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
license = { text = "MIT" }
keywords = ["toefl", "crawler", "scraper", "worksheet", "zhan"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
zhan-toefl = "zhan_toefl_crawler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
